Bug fixed. Watchlist stock price doesn't update after loading from cloud.